tests/baselines/reference/classAndInterface1.errors.txt
==== tests/cases/compiler/classAndInterface1.ts (1 errors) ====
    class cli { }
    interface cli { } // error
              ~~~
!!! error TS2300: Duplicate identifier 'cli'.